# Opencalw-Gce-fleet

./: .gitignore  ARCHITECTURE.md  CODE_MAP.md  Cargo.toml  Dockerfile  LICENSE  PULL_REQUEST_BODY.md  README.md  README.md.nomad  STATUS.md  activity_metrics.json  cloudbuild.yaml  code_map.json  conflicts.txt  conflicts_filtered.txt  estimate_cost.sh  knowledge_graph.json  oracle_prediction.json  package.json
.github/: labeler.yml
backlog/: 001_chaplain_integration_test.md  003_wargames_refinement.md  004_war_council_library.md  005_financial_trading_framework.md  006_parent_company_advisors.md  007_project_royal_seal.md  009_nation_foreign_office.md  010_nation_weather_command.md  011_nation_social_fabric.md  012_religious_knowledge_framework.md  013_subsidiary_war_games.md  015_nomad_phase_2_ai.md  016_rust_migration_doctrine.md  GOVERNANCE.md  README.md  STRATEGY.md  User backlog for AI task queuing
data/: security_insights.json
docs/: ARCHITECTURE_LOG.md  RELEASE_NOTES_V5_GOLD.md  VISION_OF_THE_WORKFORCE.md
terraform/: compliance.tf  data_warehouse.tf  devops.tf  dialogflow.tf  dr.tf  fortress.tf  functions.tf  hyperscale.tf  knowledge.tf  knowledge_base.tf  main.tf  network.tf  outputs.tf  pipeline.tf  provider.tf  scheduler.tf  secrets.tf  services.tf  skills.tf  variables.tf  variables_compliance.tf  variables_dr.tf  variables_hyperscale.tf  variables_security.tf  vpn.tf  wargames.tf
tools/: SHA256SUMS  archive_completed.py  audit_dependencies.py  build_iso.sh  calculate_velocity.py  check_links.py  check_status.py  detect_duplicates.py  generate_par2.sh  (+26 more)
(+216 files in other folders)
